# osm-yolo-crossings

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  attrib_dataset.py  attrib_model.py  attrib_tuned_model.py  box.py  check_on_osm.py  compute_loss_fix.py  config.py  crossing_merger.py  crossing_suggestion.py  crossing_type.py  cuda-shell.nix  dataset.py  db_added.py  db_grid.py  default.nix  docker-compose.dev.yml  grid_filter.py  import_speed_limit.py  keras_box.py  latlon.py  line.py  main.py  model.py  model_save_fix.py  one_cycle_scheduler.py  openstreetmap.py  orjson_storage.py  orto.py  osm_change.py  overpass.py  polygon.py  polygon2.py  preload.py  (+10 more)
.github/: FUNDING.yml
dataset/ATTRIB/CVAT_1/: annotations.xml
dataset/ATTRIB/CVAT_1/generic/related_images/49_39437570,20_95620690_png/: position.json
dataset/ATTRIB/CVAT_1/generic/related_images/49_39627900,20_95712070_png/: position.json
dataset/ATTRIB/CVAT_10/: annotations.xml
dataset/ATTRIB/CVAT_11/: annotations.xml
dataset/ATTRIB/CVAT_12/: annotations.xml
dataset/ATTRIB/CVAT_13/: annotations.xml
dataset/ATTRIB/CVAT_2/: annotations.xml
dataset/ATTRIB/CVAT_3/: annotations.xml
dataset/ATTRIB/CVAT_4/: annotations.xml
dataset/ATTRIB/CVAT_5/: annotations.xml
dataset/ATTRIB/CVAT_6/: annotations.xml
dataset/ATTRIB/CVAT_7/: annotations.xml
dataset/ATTRIB/CVAT_8/: annotations.xml
dataset/ATTRIB/CVAT_9/: annotations.xml
dataset/YOLO/CVAT/: annotations.xml
dataset/YOLO/CVAT_2/: annotations.xml
resources/: card.xcf  diagram.txt  icon.xcf
(+12093 files in other folders)
