[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "osm-yolo-crossings"
version = "0.0.0"

[tool.poetry.dependencies]
httpx = {extras = ["brotli", "http2"], version = "^0.26.0"}
keras-core = "^0.1.7"
keras-cv = "^0.8.1"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
numba = "^0.58.1"
numpy = "^1.26.3"
opencv-python-headless = "^4.9.0.80"
orjson = "^3.9.10"
pandas = "^2.1.4"
pillow = "^10.2.0"
pymongo = "^4.6.1"
pyproj = "^3.6.1"
python = "~3.11"
python-xlib = "^0.33"
rtree = "^1.1.0"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
shapely = "^2.0.2"
tenacity = "^8.2.3"
tensorflow = "^2.14"
tinydb = "^4.8.0"
xmltodict = "^0.13.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
